examples/type_system/failing/180_type_adt_missing_assign.flx
type Maybe<T> Some(T) | None
let after = 1
